# web-tetris

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  score.py
backend/app/routes/: __init__.py  score.py
backend/app/schemas/: __init__.py  score.py
backend/tests/: conftest.py
backend/tests/api/: __init__.py  test_score.py
contracts/: score.contract.ts  types.ts
docs/planning/: 01-prd.md  02-trd.md  03-user-flow.md  04-database-design.md  05-design-system.md  06-tasks.md  07-coding-convention.md
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/e2e/: game.spec.ts
frontend/src/: main.ts
frontend/src/game/config/: constants.ts  game.config.ts  levels.ts  tetrominos.ts
frontend/src/game/objects/: Board.ts  ScoreManager.ts  Tetromino.ts
frontend/src/game/scenes/: BootScene.ts  GameOverScene.ts  GameScene.ts  TitleScene.ts
frontend/src/game/systems/: AudioManager.ts  CollisionSystem.ts
frontend/src/mocks/: browser.ts  server.ts
frontend/src/mocks/handlers/: index.ts  score.ts
frontend/src/services/: scoreApi.ts
frontend/src/types/: game.types.ts
frontend/src/utils/: logger.ts
frontend/tests/unit/: board.test.ts  collision.test.ts  scoring.test.ts  tetromino.test.ts
